@@ -9,3 +9,13 @@
 	background: url(external.png) center right no-repeat;
 	padding-right: 13px;
 }
+.rtl #bodyContent a.external {
+	background-image: url(external-rtl.png);
+	padding-right: 13px;
+}
+
+.rtl a.feedlink {
+  background-position: right;
+  padding-right: 0;
+  padding-left: 16px;
+}
